# PhysicalVisualizationDesign

./: .gitignore  .gitmodules  Makefile  README.md
data/: pvd.db
execution/: CMakeLists.txt  http_server.py  index.html
execution/client/wasm/include/: pvd_client.h
execution/client/wasm/src/: main.cpp  pvd_client.cpp
execution/plans/: brightkite.js  covid.js  covid.py  flights.js  flights.py  immens.py  liquor.js  liquor.py  plan_json_constructor.py  sdss.js  sdss.py  weather.py
execution/server/src/: main.cpp
execution/share/include/: arrow_utils.h  binding.h  cloud_api.h  data.h  expression.h  json.h  metrics.h  network.h  plan.h  rtree.h
execution/share/include/fc/: btree.h  disk_fixed_alloc.h
execution/share/src/: binding.cpp
execution/share/src/expression/: any_expr.cpp  bool_const.cpp  column_ref.cpp  expression.cpp  float_const.cpp  from_json.cpp  func.cpp  int_const.cpp  list.cpp  multi_expr.cpp  op.cpp  string_const.cpp  val_expr.cpp
execution/share/src/plan/: acero_plan.cpp  aggregate.cpp  any_plan.cpp  cloud.cpp  data.cpp  dcache.cpp  filter.cpp  from_json.cpp  hash_table.cpp  network.cpp  plan.cpp  prefix_sum.cpp  prefix_sum_2d.cpp  projection.cpp  rtree.cpp  scache.cpp  table_source.cpp
optimizer/: config.py  examples.py  main.py  optimize.py  requirements.txt  search.py
optimizer/plan/: __init__.py  aggregate.py  choice_plan.py  cloud.py  cost.py  database.py  dcache.py  expressions.py  filter.py  hashtable_build.py  hashtable_query.py  network.py  plan_base.py  prefixsum2d_build.py  prefixsum2d_query.py  prefixsum_build.py  prefixsum_query.py  projection.py  rtree_build.py  rtree_query.py  scache.py  table.py  utils.py
optimizer/rule/: __init__.py  hashtable_rule.py  merge_aggregate.py  merge_projection.py  merge_sort_filter.py  mv_rule.py  prefixsum2d_rule.py  prefixsum_rule.py  rtree_rule.py  rule_base.py  split_filter.py  swap_filter.py  swap_filter_aggregate.py
